# FWB4

./: LICENSE  README.md  main.py  pyproject.toml
Commands/: IndexCmds.py  InnitCmds.py  MemeCmds.py  OriginalCmds.py
FlyingWienerOS/: BotEvents.py  FWVariables.py  OnReady.py  ServiceRequest.py  keep_alive.py
Txts/: ChangeLog.txt  Servers.txt
