[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
bs4 = "^0.0.1"
discord = "^1.7.3"
requests = "^2.27.1"
pytz = "^2022.1"
"discord.py" = "^2.1.0"
orjson = "^3.8.2"
PyNaCl = "^1.5.0"
typing-extensions = "^4.4.0"
Flask = "^2.2.2"
CommandModule = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"